--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="products-grid">
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-tshirt product-icon"></i>
+                    <img src="images/NECK.jpg" alt="Neck Metrical Jumpsuit" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -125,10 +125,10 @@
                     <span class="product-badge new">New</span>
                 </div>
                 <div class="product-info">
-                    <h3>Noir Elegance</h3>
-                    <p>Classic black bodysuit with sculptured neckline</p>
+                    <h3>Neck Metrical Jumpsuit</h3>
+                    <p>Elegant jumpsuit with unique neckline design</p>
                     <div class="product-price">
-                        <span class="price">R1,299</span>
+                        <span class="price">R300</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -142,7 +142,7 @@
 
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-vest product-icon"></i>
+                    <img src="images/LONG.jpg" alt="Long Two Piece" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -150,10 +150,10 @@
                     <span class="product-badge bestseller">Bestseller</span>
                 </div>
                 <div class="product-info">
-                    <h3>Velvet Dreams</h3>
-                    <p>Luxe velvet bodysuit with pearl detailing</p>
+                    <h3>Long Two Piece</h3>
+                    <p>Sophisticated two-piece set for versatile styling</p>
                     <div class="product-price">
-                        <span class="price">R1,899</span>
+                        <span class="price">R350</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -167,17 +167,17 @@
 
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-user-tie product-icon"></i>
+                    <img src="images/BACK OPEN.jpg" alt="Backopen Jumpsuit" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-info">
-                    <h3>Satin Mystique</h3>
-                    <p>Silky satin bodysuit with plunge back</p>
+                    <h3>Backopen Jumpsuit</h3>
+                    <p>Stunning jumpsuit with elegant open-back design</p>
                     <div class="product-price">
-                        <span class="price">R1,449</span>
+                        <span class="price">R350</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
 
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-tshirt product-icon"></i>
+                    <img src="images/RIBBED LONG.jpg" alt="Ribbed Long Sleeve Jumpsuit" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -199,10 +199,10 @@
                     <span class="product-badge limited">Limited</span>
                 </div>
                 <div class="product-info">
-                    <h3>Lace Reverie</h3>
-                    <p>Delicate lace bodysuit with mesh panels</p>
+                    <h3>Ribbed Long Sleeve Jumpsuit</h3>
+                    <p>Textured ribbed jumpsuit perfect for any occasion</p>
                     <div class="product-price">
-                        <span class="price">R1,599</span>
+                        <span class="price">R350</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -216,17 +216,17 @@
 
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-user-tie product-icon"></i>
+                    <img src="images/RIBBED SHORT.jpg" alt="Ribbed Short Jumpsuit" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-info">
-                    <h3>Shimmer Luxe</h3>
-                    <p>Metallic bodysuit with halter neckline</p>
+                    <h3>Ribbed Short Jumpsuit</h3>
+                    <p>Chic ribbed jumpsuit with modern short sleeves</p>
                     <div class="product-price">
-                        <span class="price">R2,049</span>
+                        <span class="price">R250</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -240,7 +240,7 @@
 
             <div class="product-card" data-scroll>
                 <div class="product-image">
-                    <i class="fas fa-vest product-icon"></i>
+                    <img src="images/OUTDOOR.jpg" alt="Outdoor Yoga Jumpsuit" class="product-img">
                     <div class="product-overlay">
                         <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                         <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -248,10 +248,10 @@
                     <span class="product-badge new">New</span>
                 </div>
                 <div class="product-info">
-                    <h3>Mesh Fusion</h3>
-                    <p>Contemporary mesh bodysuit with cutouts</p>
+                    <h3>Outdoor Yoga Jumpsuit</h3>
+                    <p>Premium activewear jumpsuit for yoga and fitness</p>
                     <div class="product-price">
-                        <span class="price">R1,379</span>
+                        <span class="price">R450</span>
                         <div class="rating">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -263,12 +263,12 @@
                 </div>
             </div>
         </div>
-        <div class="products-cta" data-scroll>
+        <!-- <div class="products-cta" data-scroll>
             <a href="products.html" class="btn btn-primary btn-large">
                 <span>View Full Collection</span>
                 <i class="fas fa-arrow-right"></i>
             </a>
-        </div>
+        </div> -->
     </section>
 
     <!-- Gallery Section -->
@@ -470,7 +470,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 Body Parlor. All rights reserved. Crafted with <i class="fas fa-heart"></i> for those who dare to shine.</p>
+            <p>&copy; 2025 Body Parlor. All rights reserved. Designed by <a href="https://www.facebook.com/sandile.milanzi.10/" target="_blank" style="color: var(--primary); text-decoration: none; transition: var(--transition-base);">Omegatek Solutions</a>.</p>
             <div class="payment-icons">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-mastercard"></i>
@@ -485,6 +485,47 @@
     <button class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <!-- Quick View Modal -->
+    <div class="quick-view-modal" id="quickViewModal">
+        <div class="quick-view-content">
+            <button class="quick-view-close" id="quickViewClose">&times;</button>
+            <div class="quick-view-product">
+                <div class="quick-view-icon">
+                    <div id="quickViewIcon" class="quick-view-image-container">
+                        <i class="fas fa-tshirt"></i>
+                    </div>
+                </div>
+                <div class="quick-view-details">
+                    <h2 id="quickViewName">Product Name</h2>
+                    <p id="quickViewDescription">Product description</p>
+                    <div class="quick-view-price" id="quickViewPrice">R300</div>
+                    <div class="quick-view-sizes">
+                        <h4>Select Size:</h4>
+                        <div class="size-options">
+                            <button class="size-option" data-size="XS">XS</button>
+                            <button class="size-option" data-size="S">S</button>
+                            <button class="size-option selected" data-size="M">M</button>
+                            <button class="size-option" data-size="L">L</button>
+                            <button class="size-option" data-size="XL">XL</button>
+                        </div>
+                    </div>
+                    <div class="quick-view-actions">
+                        <button class="btn btn-primary" id="quickViewAddToCart">
+                            <i class="fas fa-shopping-bag"></i>
+                            <span>Add to Cart</span>
+                        </button>
+                        <button class="btn btn-secondary" id="quickViewClose2">
+                            <span>Close</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Quick View Overlay -->
+    <div class="quick-view-overlay" id="quickViewOverlay"></div>
 
     <!-- Shopping Cart Sidebar -->
     <div class="cart-sidebar" id="cartSidebar">
