--- a/products.html
+++ b/products.html
@@ -110,8 +110,8 @@
             margin: 0 auto;
             padding: 0 2rem 6rem;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 3rem;
         }
 
         .product-details {
@@ -258,9 +258,9 @@
     <!-- Full Products Grid -->
     <section class="products-full-grid" id="productsGrid">
         <!-- Product 1 -->
-        <div class="product-card" data-category="evening" data-price="1299">
+        <div class="product-card" data-category="evening" data-price="300">
             <div class="product-image">
-                <i class="fas fa-tshirt product-icon"></i>
+                <img src="images/NECK.jpg" alt="Neck Metrical Jumpsuit" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -268,8 +268,8 @@
                 <span class="product-badge new">New</span>
             </div>
             <div class="product-info">
-                <h3>Noir Elegance</h3>
-                <p>Classic black bodysuit with sculptured neckline</p>
+                <h3>Neck Metrical Jumpsuit</h3>
+                <p>Elegant jumpsuit with unique neckline design</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: #1a1a1a;"></span>
@@ -296,9 +296,9 @@
         </div>
 
         <!-- Product 2 -->
-        <div class="product-card" data-category="luxury" data-price="129.99">
+        <div class="product-card" data-category="luxury" data-price="350">
             <div class="product-image">
-                <i class="fas fa-vest product-icon"></i>
+                <img src="images/LONG.jpg" alt="Long Two Piece" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -306,8 +306,8 @@
                 <span class="product-badge bestseller">Bestseller</span>
             </div>
             <div class="product-info">
-                <h3>Velvet Dreams</h3>
-                <p>Luxe velvet bodysuit with pearl detailing</p>
+                <h3>Long Two Piece</h3>
+                <p>Sophisticated two-piece set for versatile styling</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #8B0000;"></span>
                     <span class="color-swatch" style="background: #2F4F4F;"></span>
@@ -334,17 +334,17 @@
         </div>
 
         <!-- Product 3 -->
-        <div class="product-card" data-category="evening" data-price="99.99">
+        <div class="product-card" data-category="evening" data-price="350">
             <div class="product-image">
-                <i class="fas fa-user-tie product-icon"></i>
+                <img src="images/BACK OPEN.jpg" alt="Backopen Jumpsuit" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
                 </div>
             </div>
             <div class="product-info">
-                <h3>Satin Mystique</h3>
-                <p>Silky satin bodysuit with plunge back</p>
+                <h3>Backopen Jumpsuit</h3>
+                <p>Stunning jumpsuit with elegant open-back design</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #C0C0C0;"></span>
                     <span class="color-swatch" style="background: #FFD700;"></span>
@@ -370,9 +370,9 @@
         </div>
 
         <!-- Product 4 -->
-        <div class="product-card" data-category="luxury" data-price="109.99">
+        <div class="product-card" data-category="luxury" data-price="350">
             <div class="product-image">
-                <i class="fas fa-tshirt product-icon"></i>
+                <img src="images/RIBBED LONG.jpg" alt="Ribbed Long Sleeve Jumpsuit" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -380,8 +380,8 @@
                 <span class="product-badge limited">Limited</span>
             </div>
             <div class="product-info">
-                <h3>Lace Reverie</h3>
-                <p>Delicate lace bodysuit with mesh panels</p>
+                <h3>Ribbed Long Sleeve Jumpsuit</h3>
+                <p>Textured ribbed jumpsuit perfect for any occasion</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #FFFFFF; border-color: #d4af37;"></span>
                     <span class="color-swatch" style="background: #FFE4E1;"></span>
@@ -406,17 +406,17 @@
         </div>
 
         <!-- Product 5 -->
-        <div class="product-card" data-category="evening" data-price="139.99">
+        <div class="product-card" data-category="evening" data-price="250">
             <div class="product-image">
-                <i class="fas fa-user-tie product-icon"></i>
+                <img src="images/RIBBED SHORT.jpg" alt="Ribbed Short Jumpsuit" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
                 </div>
             </div>
             <div class="product-info">
-                <h3>Shimmer Luxe</h3>
-                <p>Metallic bodysuit with halter neckline</p>
+                <h3>Ribbed Short Jumpsuit</h3>
+                <p>Chic ribbed jumpsuit with modern short sleeves</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: linear-gradient(135deg, #FFD700, #FFA500);"></span>
                     <span class="color-swatch" style="background: linear-gradient(135deg, #C0C0C0, #808080);"></span>
@@ -443,9 +443,9 @@
         </div>
 
         <!-- Product 6 -->
-        <div class="product-card" data-category="casual" data-price="94.99">
+        <div class="product-card" data-category="sport" data-price="450">
             <div class="product-image">
-                <i class="fas fa-vest product-icon"></i>
+                <img src="images/OUTDOOR.jpg" alt="Outdoor Yoga Jumpsuit" class="product-img">
                 <div class="product-overlay">
                     <button class="quick-view"><i class="fas fa-eye"></i> Quick View</button>
                     <button class="add-to-cart"><i class="fas fa-shopping-bag"></i> Add to Cart</button>
@@ -453,8 +453,8 @@
                 <span class="product-badge new">New</span>
             </div>
             <div class="product-info">
-                <h3>Mesh Fusion</h3>
-                <p>Contemporary mesh bodysuit with cutouts</p>
+                <h3>Outdoor Yoga Jumpsuit</h3>
+                <p>Premium activewear jumpsuit for yoga and fitness</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: #FFFFFF; border-color: #d4af37;"></span>
@@ -490,7 +490,7 @@
             </div>
             <div class="product-info">
                 <h3>Active Spirit</h3>
-                <p>Performance bodysuit with moisture-wicking</p>
+                <p>Performance jumpsuit with moisture-wicking fabric</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: #4169E1;"></span>
@@ -526,8 +526,8 @@
                 </div>
             </div>
             <div class="product-info">
-                <h3>Cotton Comfort</h3>
-                <p>Soft cotton blend for everyday wear</p>
+                <h3>Casual Comfort</h3>
+                <p>Soft cotton blend jumpsuit for everyday wear</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #FFFFFF; border-color: #d4af37;"></span>
                     <span class="color-swatch" style="background: #F5F5DC;"></span>
@@ -564,8 +564,8 @@
                 <span class="product-badge limited">Limited</span>
             </div>
             <div class="product-info">
-                <h3>Crystal Cascade</h3>
-                <p>Embellished with Swarovski crystals</p>
+                <h3>Premium Crystal</h3>
+                <p>Luxurious jumpsuit embellished with crystals</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: linear-gradient(135deg, #E6E6FA, #D8BFD8);"></span>
@@ -599,8 +599,8 @@
                 <span class="product-badge bestseller">Bestseller</span>
             </div>
             <div class="product-info">
-                <h3>Sequin Sensation</h3>
-                <p>All-over sequins for maximum glamour</p>
+                <h3>Evening Sequin</h3>
+                <p>All-over sequins jumpsuit for maximum glamour</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: linear-gradient(135deg, #FFD700, #FFA500);"></span>
                     <span class="color-swatch" style="background: linear-gradient(135deg, #C0C0C0, #E8E8E8);"></span>
@@ -635,8 +635,8 @@
                 </div>
             </div>
             <div class="product-info">
-                <h3>Essential Basics</h3>
-                <p>Timeless design for everyday elegance</p>
+                <h3>Basic Essential</h3>
+                <p>Timeless jumpsuit design for everyday elegance</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: #FFFFFF; border-color: #d4af37;"></span>
@@ -674,8 +674,8 @@
                 <span class="product-badge new">New</span>
             </div>
             <div class="product-info">
-                <h3>Power Flex</h3>
-                <p>High-compression bodysuit for workouts</p>
+                <h3>Flex Power</h3>
+                <p>High-compression jumpsuit for intense workouts</p>
                 <div class="product-colors">
                     <span class="color-swatch" style="background: #000000;"></span>
                     <span class="color-swatch" style="background: #8A2BE2;"></span>
@@ -754,7 +754,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 Body Parlor. All rights reserved. Crafted with <i class="fas fa-heart"></i> for those who dare to shine.</p>
+            <p>&copy; 2025 Body Parlor. All rights reserved. Designed by <a href="https://www.facebook.com/sandile.milanzi.10/" target="_blank" style="color: var(--primary); text-decoration: none; transition: var(--transition-base);">Omegatek Solutions</a>.</p>
             <div class="payment-icons">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-mastercard"></i>
@@ -769,6 +769,47 @@
     <button class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <!-- Quick View Modal -->
+    <div class="quick-view-modal" id="quickViewModal">
+        <div class="quick-view-content">
+            <button class="quick-view-close" id="quickViewClose">&times;</button>
+            <div class="quick-view-product">
+                <div class="quick-view-icon">
+                    <div id="quickViewIcon" class="quick-view-image-container">
+                        <i class="fas fa-tshirt"></i>
+                    </div>
+                </div>
+                <div class="quick-view-details">
+                    <h2 id="quickViewName">Product Name</h2>
+                    <p id="quickViewDescription">Product description</p>
+                    <div class="quick-view-price" id="quickViewPrice">R300</div>
+                    <div class="quick-view-sizes">
+                        <h4>Select Size:</h4>
+                        <div class="size-options">
+                            <button class="size-option" data-size="XS">XS</button>
+                            <button class="size-option" data-size="S">S</button>
+                            <button class="size-option selected" data-size="M">M</button>
+                            <button class="size-option" data-size="L">L</button>
+                            <button class="size-option" data-size="XL">XL</button>
+                        </div>
+                    </div>
+                    <div class="quick-view-actions">
+                        <button class="btn btn-primary" id="quickViewAddToCart">
+                            <i class="fas fa-shopping-bag"></i>
+                            <span>Add to Cart</span>
+                        </button>
+                        <button class="btn btn-secondary" id="quickViewClose2">
+                            <span>Close</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Quick View Overlay -->
+    <div class="quick-view-overlay" id="quickViewOverlay"></div>
 
     <!-- Shopping Cart Sidebar -->
     <div class="cart-sidebar" id="cartSidebar">
