--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <title>Shop Collection - Body Parlor</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile-fixes.css">
+    <link rel="stylesheet" href="cart-mobile-fix.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Additional Styles for Products Page */
